Update and rename researchField.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pubulication2</title>
+  <title>researchField</title>
   <!-- <link href="publication.css" rel="stylesheet"/>
   <link href="boot.css" rel="stylesheet"/>
   <link href="min.css" rel="stylesheet"/> -->
