--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@ fieldList.click(function(){
 });
 });
   </script>
+	<style> ul {
+    list-style-type: none; 
+    padding:0;
+    }
+   li{
+      font-size:2em;
+      display: inline-block;
+      padding: 15px;
+    border: solid 1px rgb(100,100,100,0.2); 
+}
+li a{
+  color: black; 
+    text-decoration: none;
+}
+ #researchField{
+   /* float:left; */
+   margin-right: 30px;
+ }
+ #paperType{
+   display: inline-block;
+    
+  }
+   .selected{
+				color:white;
+        background-color: gray;
+			} </style>
 </head>
 <body>
   <h1>publication</h1>
